First Update commit

--- a/app/globals.css
+++ b/app/globals.css
@@ -72,6 +72,15 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+
+  .hide-scrollbar {
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+  }
+
+  .hide-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 /* Glass morphism effect */
